Marked some methods and variables to be callable by blueprints.

--- a/CoopGame/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/CoopGame/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -5193,12 +5193,21 @@ NewBlueprint_C.Navigation=True
 NewBlueprint_C.Localization=True
 ArrayProperty.Variable=True
 ArrayProperty.DefaultValueCategory=True
+WBP_SessionSelectionBox_C.Appearance=True
+WBP_SessionSelectionBox_C.Input=True
+WBP_SessionSelectionBox_C.Interaction=True
+WBP_SessionSelectionBox_C.Behavior=True
+WBP_SessionSelectionBox_C.Render Transform=True
+WBP_SessionSelectionBox_C.Performance=True
+WBP_SessionSelectionBox_C.Clipping=True
+WBP_SessionSelectionBox_C.Navigation=True
+WBP_SessionSelectionBox_C.Localization=True
 
 [AssetEditorManager]
 CleanShutdown=False
 SuppressRestorePreviouslyOpenAssetsNotification=True
-OpenAssetsAtExit=/Game/UI/WBP_LevelSelectionBox.WBP_LevelSelectionBox
-OpenAssetsAtExit=/Game/UI/WBP_ContentSelectionButton.WBP_ContentSelectionButton
+OpenAssetsAtExit=/Game/UI/SelectionBoxes/WBP_SessionSelectionBox.WBP_SessionSelectionBox
+OpenAssetsAtExit=/Game/UI/SelectionBoxes/WBP_ContentSelectionBox.WBP_ContentSelectionBox
 
 [RootWindow]
 ScreenPosition=X=470.000 Y=198.000
@@ -5409,7 +5418,7 @@ PopulateBox_3=BP_PlayerPawn_C.Physics.ConstraintsGroup,BP_PlayerPawn_C.Rendering
 
 [DetailPropertyExpansion]
 InputSettings="\"Object.Bindings.ActionMappings.ActionMappings[4]\" "
-Object="\"Object.Appearance.ColorAndOpacity\" \"Object.Render Transform.RenderTransform\" "
+Object="\"Object.Render Transform.RenderTransform\" "
 BP_PlayerPawn_C="\"Object.Components.camera.Object.PostProcess.PostProcessSettings\" \"Object.Components.camera.Object.PostProcess.PostProcessSettings.ColorSaturationShadows\" \"Object.Components.camera.Object.PostProcess.PostProcessSettings.ColorContrastShadows\" \"Object.Components.camera.Object.PostProcess.PostProcessSettings.ColorGammaShadows\" \"Object.Components.camera.Object.PostProcess.PostProcessSettings.ColorGainShadows\" \"Object.Components.camera.Object.PostProcess.PostProcessSettings.ColorOffsetShadows\" \"Object.Components.camera.Object.PostProcess.PostProcessSettings.LensFlareTints\" \"Object.Character.Mesh.Object.Collision.BodyInstance.WalkableSlopeOverride\" \"Object.Character.CharacterMovement.Object.Character Movement (Rotation Settings).RotationRate\" \"Object.Character.CharacterMovement.Object.Character Movement: Avoidance.AvoidanceGroup\" \"Object.Character.CharacterMovement.Object.Character Movement: Avoidance.GroupsToAvoid\" \"Object.Character.CharacterMovement.Object.Character Movement: Avoidance.GroupsToIgnore\" \"Object.Character.CharacterMovement.Object.NavMovement.NavAgentProps\" \"Object.Character.CapsuleComponent.Object.Collision.BodyInstance.WalkableSlopeOverride\" "
 SCharacter="\"Object.Components.camera.Object.PostProcess.PostProcessSettings\" \"Object.Components.camera.Object.PostProcess.PostProcessSettings.ColorSaturationShadows\" \"Object.Components.camera.Object.PostProcess.PostProcessSettings.ColorContrastShadows\" \"Object.Components.camera.Object.PostProcess.PostProcessSettings.ColorGammaShadows\" \"Object.Components.camera.Object.PostProcess.PostProcessSettings.ColorGainShadows\" \"Object.Components.camera.Object.PostProcess.PostProcessSettings.ColorOffsetShadows\" \"Object.Components.camera.Object.PostProcess.PostProcessSettings.LensFlareTints\" \"Object.Character.Mesh.Object.Collision.BodyInstance.WalkableSlopeOverride\" \"Object.Character.CharacterMovement.Object.Character Movement (Rotation Settings).RotationRate\" \"Object.Character.CharacterMovement.Object.Character Movement: Avoidance.AvoidanceGroup\" \"Object.Character.CharacterMovement.Object.Character Movement: Avoidance.GroupsToAvoid\" \"Object.Character.CharacterMovement.Object.Character Movement: Avoidance.GroupsToIgnore\" \"Object.Character.CharacterMovement.Object.NavMovement.NavAgentProps\" \"Object.Character.CapsuleComponent.Object.Collision.BodyInstance.WalkableSlopeOverride\" "
 Character="\"Object.Components.camera.Object.PostProcess.PostProcessSettings\" \"Object.Components.camera.Object.PostProcess.PostProcessSettings.ColorSaturationShadows\" \"Object.Components.camera.Object.PostProcess.PostProcessSettings.ColorContrastShadows\" \"Object.Components.camera.Object.PostProcess.PostProcessSettings.ColorGammaShadows\" \"Object.Components.camera.Object.PostProcess.PostProcessSettings.ColorGainShadows\" \"Object.Components.camera.Object.PostProcess.PostProcessSettings.ColorOffsetShadows\" \"Object.Components.camera.Object.PostProcess.PostProcessSettings.LensFlareTints\" \"Object.Character.Mesh.Object.Collision.BodyInstance.WalkableSlopeOverride\" \"Object.Character.CharacterMovement.Object.Character Movement (Rotation Settings).RotationRate\" \"Object.Character.CharacterMovement.Object.Character Movement: Avoidance.AvoidanceGroup\" \"Object.Character.CharacterMovement.Object.Character Movement: Avoidance.GroupsToAvoid\" \"Object.Character.CharacterMovement.Object.Character Movement: Avoidance.GroupsToIgnore\" \"Object.Character.CharacterMovement.Object.NavMovement.NavAgentProps\" \"Object.Character.CapsuleComponent.Object.Collision.BodyInstance.WalkableSlopeOverride\" "
@@ -5435,8 +5444,8 @@ ParticleModuleColorBase="\"Object.Color.ColorOverLife.Distribution\" \"Object.Co
 ParticleModule="\"Object.Color.ColorOverLife.Distribution\" \"Object.Color.AlphaOverLife\" \"Object.Color.AlphaOverLife.Distribution\" \"Object.Color.AlphaOverLife.Distribution.Object.ConstantCurve\" \"Object.Color.AlphaOverLife.Distribution.Object.ConstantCurve.Points\" \"Object.Color.AlphaOverLife.Distribution.Object.ConstantCurve.Points.Points[0]\" "
 ParticleSystem="\"Object.Materials.NamedMaterialSlots\" "
 Image="\"Object.Appearance.Brush\" \"Object.Appearance.ColorAndOpacity\" \"Object.Render Transform.RenderTransform\" "
-Widget="\"Object.Appearance.ColorAndOpacity\" \"Object.Render Transform.RenderTransform\" "
-Visual="\"Object.Appearance.ColorAndOpacity\" \"Object.Render Transform.RenderTransform\" "
+Widget="\"Object.Render Transform.RenderTransform\" "
+Visual="\"Object.Render Transform.RenderTransform\" "
 StaticMeshActor=
 BP_RifleCameraRecoil_C="\"Object.Oscillation.RotOscillation\" \"Object.Oscillation.RotOscillation.Pitch\" \"Object.Oscillation.RotOscillation.Roll\" \"Object.Oscillation.FOVOscillation\" "
 CameraShake="\"Object.Oscillation.RotOscillation\" \"Object.Oscillation.RotOscillation.Pitch\" \"Object.Oscillation.RotOscillation.Yaw\" \"Object.Oscillation.RotOscillation.Roll\" \"Object.Oscillation.FOVOscillation\" "
@@ -5457,7 +5466,7 @@ PhysicsVolume="\"Object.Collision.BrushComponent.Object.Collision.BodyInstance\"
 Volume="\"Object.Collision.BrushComponent.Object.Collision.BodyInstance\" \"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 Brush="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 WBP_HealthIndicator_C="\"Object.Appearance.ColorAndOpacity\" "
-UserWidget="\"Object.Appearance.ColorAndOpacity\" \"Object.Render Transform.RenderTransform\" "
+UserWidget="\"Object.Render Transform.RenderTransform\" "
 BP_ExplosiveBarrel_C=
 SExplosiveBarrel=
 REINST_BP_ExplosiveBarrel_C_33=
@@ -5597,8 +5606,8 @@ SLevelSelectionBoxWidget=
 WrapBox="\"Object.Render Transform.RenderTransform\" "
 ScrollBox="\"Object.Style.WidgetStyle\" \"Object.Style.WidgetStyle.LeftShadowBrush\" \"Object.Style.WidgetBarStyle\" \"Object.Render Transform.RenderTransform\" "
 WBP_ContentSelectionButton_C="\"Object.Appearance.ColorAndOpacity\" \"Object.Render Transform.RenderTransform\" "
-WBP_ContentSelectionBox_C="\"Object.Appearance.ColorAndOpacity\" \"Object.Render Transform.RenderTransform\" "
-SContentSelectionBoxWidget="\"Object.Appearance.ColorAndOpacity\" \"Object.Render Transform.RenderTransform\" "
+WBP_ContentSelectionBox_C="\"Object.Render Transform.RenderTransform\" "
+SContentSelectionBoxWidget="\"Object.Render Transform.RenderTransform\" "
 
 [PlacementMode]
 RecentlyPlaced=/Script/NavigationSystem.NavMeshBoundsVolume;/Engine/Transient.ActorFactoryBoxVolume_0
@@ -5623,26 +5632,26 @@ RecentlyPlaced=/Script/Engine.SphereReflectionCapture;/Engine/Transient.ActorFac
 RecentlyPlaced=/Game/Blueprints/Miscellaneous/BP_ExplosiveBarrel.BP_ExplosiveBarrel;
 
 [ContentBrowserRecent]
-MRUItem0=/Game/UI/WBP_LevelSelectionBox
-MRUItem1=/Game/UI/NewBlueprint
-MRUItem2=/Game/UI/WBP_ContentSelectionButton
-MRUItem3=/Game/UI/WBP_ContentSelectionBox
-MRUItem4=/Game/UI/WBP_LevelSelectMenu
-MRUItem5=/Game/UI/WBP_LevelSelectionButton
-MRUItem6=/Game/Level/MainMenu
-MRUItem7=/Game/GameModes/BP_TestGameMode
-MRUItem8=/Game/Level/maps/MainMenu
-MRUItem9=/Game/Level/maps/FloatingIsland
-MRUItem10=/Game/Level/maps/Wimbledon
-MRUItem11=/Game/Level/maps/Blockout
-MRUItem12=/Game/Level/maps/VoidMap
-MRUItem13=/Game/Level/maps/Blockout_P
-MRUItem14=/Game/Level/maps/TestMap
-MRUItem15=/Game/UI/WBP_MainMenu
-MRUItem16=/Game/Objects/Miscellaneous/ExplosiveBarrel/BP_ExplosiveBarrel
-MRUItem17=/Game/Objects/TrackerBot/BP_TrackerBot
-MRUItem18=/Game/Objects/Characters/AIPlayer/BP_MachineGun_AI
-MRUItem19=/Game/Objects/Characters/AIPlayer/BT_AIPlayer
+MRUItem0=/Game/UI/SelectionBoxes/WBP_SessionSelectionBox
+MRUItem1=/Game/UI/WBP_LevelSelectionBox
+MRUItem2=/Game/UI/NewBlueprint
+MRUItem3=/Game/UI/WBP_ContentSelectionButton
+MRUItem4=/Game/UI/WBP_ContentSelectionBox
+MRUItem5=/Game/UI/WBP_LevelSelectMenu
+MRUItem6=/Game/UI/WBP_LevelSelectionButton
+MRUItem7=/Game/Level/MainMenu
+MRUItem8=/Game/GameModes/BP_TestGameMode
+MRUItem9=/Game/Level/maps/MainMenu
+MRUItem10=/Game/Level/maps/FloatingIsland
+MRUItem11=/Game/Level/maps/Wimbledon
+MRUItem12=/Game/Level/maps/Blockout
+MRUItem13=/Game/Level/maps/VoidMap
+MRUItem14=/Game/Level/maps/Blockout_P
+MRUItem15=/Game/Level/maps/TestMap
+MRUItem16=/Game/UI/WBP_MainMenu
+MRUItem17=/Game/Objects/Miscellaneous/ExplosiveBarrel/BP_ExplosiveBarrel
+MRUItem18=/Game/Objects/TrackerBot/BP_TrackerBot
+MRUItem19=/Game/Objects/Characters/AIPlayer/BP_MachineGun_AI
 
 [AssetEditorToolkitTabLocation]
 /Game/Blueprints/BP_PlayerPawn.BP_PlayerPawn=0
@@ -5766,6 +5775,8 @@ MRUItem19=/Game/Objects/Characters/AIPlayer/BT_AIPlayer
 /Game/Objects/Powerups/VisualEffects/P_gold_ore_aura.P_gold_ore_aura=0
 /Game/UI/WBP_LevelSelectMenu.WBP_LevelSelectMenu=0
 /Game/GameModes/BP_TestGameMode.BP_TestGameMode=0
+/Game/UI/WBP_LevelSelectionBox.WBP_LevelSelectionBox=0
+/Game/UI/SelectionBoxes/WBP_ContentSelectionButton.WBP_ContentSelectionButton=0
 
 [/Script/UnrealEd.PersonaOptions]
 bAutoAlignFloorToMesh=True
