--- a/CoopGame/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/CoopGame/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -49,7 +49,7 @@ GridEnabled=False
 LastLevel=/Game/Level/MainMenu
 
 [ModuleFileTracking]
-CoopGame.TimeStamp=2020.05.17-20.43.26
+CoopGame.TimeStamp=2020.05.18-02.20.10
 CoopGame.LastCompileMethod=External
 PakFile.TimeStamp=2019.12.20-23.26.51
 PakFile.LastCompileMethod=Unknown
@@ -5202,10 +5202,25 @@ WBP_SessionSelectionBox_C.Performance=True
 WBP_SessionSelectionBox_C.Clipping=True
 WBP_SessionSelectionBox_C.Navigation=True
 WBP_SessionSelectionBox_C.Localization=True
+WBP_CreateSessionMenu_C.Appearance=True
+WBP_CreateSessionMenu_C.Designer=True
+WBP_CreateSessionMenu_C.Input=True
+WBP_CreateSessionMenu_C.Interaction=True
+WBP_CreateSessionMenu_C.Performance=True
+WBP_CreateSessionMenu_C.Layout=True
+WBP_CreateSessionMenu_C.Behavior=True
+WBP_CreateSessionMenu_C.Render Transform=True
+WBP_CreateSessionMenu_C.Clipping=True
+WBP_CreateSessionMenu_C.Navigation=True
+WBP_CreateSessionMenu_C.Localization=True
+CanvasPanel.Layout=True
+WBP_SessionSelectionBox_C.Layout=True
 
 [AssetEditorManager]
-CleanShutdown=True
+CleanShutdown=False
 SuppressRestorePreviouslyOpenAssetsNotification=True
+OpenAssetsAtExit=/Game/UI/SelectionBoxes/WBP_SessionSelectionBox.WBP_SessionSelectionBox
+OpenAssetsAtExit=/Game/UI/WBP_CreateSessionMenu.WBP_CreateSessionMenu
 
 [RootWindow]
 ScreenPosition=X=470.000 Y=198.000
@@ -5414,10 +5429,11 @@ PopulateBox=BP_PlayerPawn_C.Physics.ConstraintsGroup,BP_PlayerPawn_C.Rendering.T
 ArrayProperty=BP_PlayerPawn_C.Physics.ConstraintsGroup,BP_PlayerPawn_C.Rendering.TextureStreaming,BP_PlayerPawn_C.Rendering.LOD,BP_PlayerPawn_C.Collision.Collision,BP_TrackerBot_C.Physics.ConstraintsGroup,BP_TrackerBot_C.Rendering.TextureStreaming,BP_TrackerBot_C.Rendering.LOD,BP_TrackerBot_C.Collision.Collision,
 PopulateBox_3=BP_PlayerPawn_C.Physics.ConstraintsGroup,BP_PlayerPawn_C.Rendering.TextureStreaming,BP_PlayerPawn_C.Rendering.LOD,BP_PlayerPawn_C.Collision.Collision,BP_TrackerBot_C.Physics.ConstraintsGroup,BP_TrackerBot_C.Rendering.TextureStreaming,BP_TrackerBot_C.Rendering.LOD,BP_TrackerBot_C.Collision.Collision,
 WBP_SessionSelectionBox_C=BP_PlayerPawn_C.Physics.ConstraintsGroup,BP_PlayerPawn_C.Rendering.TextureStreaming,BP_PlayerPawn_C.Rendering.LOD,BP_PlayerPawn_C.Collision.Collision,BP_TrackerBot_C.Physics.ConstraintsGroup,BP_TrackerBot_C.Rendering.TextureStreaming,BP_TrackerBot_C.Rendering.LOD,BP_TrackerBot_C.Collision.Collision,
+SGameInstance=BP_PlayerPawn_C.Physics.ConstraintsGroup,BP_PlayerPawn_C.Rendering.TextureStreaming,BP_PlayerPawn_C.Rendering.LOD,BP_PlayerPawn_C.Collision.Collision,BP_TrackerBot_C.Physics.ConstraintsGroup,BP_TrackerBot_C.Rendering.TextureStreaming,BP_TrackerBot_C.Rendering.LOD,BP_TrackerBot_C.Collision.Collision,
 
 [DetailPropertyExpansion]
 InputSettings="\"Object.Bindings.ActionMappings.ActionMappings[4]\" "
-Object=
+Object="\"Object.Render Transform.RenderTransform\" "
 BP_PlayerPawn_C="\"Object.Components.camera.Object.PostProcess.PostProcessSettings\" \"Object.Components.camera.Object.PostProcess.PostProcessSettings.ColorSaturationShadows\" \"Object.Components.camera.Object.PostProcess.PostProcessSettings.ColorContrastShadows\" \"Object.Components.camera.Object.PostProcess.PostProcessSettings.ColorGammaShadows\" \"Object.Components.camera.Object.PostProcess.PostProcessSettings.ColorGainShadows\" \"Object.Components.camera.Object.PostProcess.PostProcessSettings.ColorOffsetShadows\" \"Object.Components.camera.Object.PostProcess.PostProcessSettings.LensFlareTints\" \"Object.Character.Mesh.Object.Collision.BodyInstance.WalkableSlopeOverride\" \"Object.Character.CharacterMovement.Object.Character Movement (Rotation Settings).RotationRate\" \"Object.Character.CharacterMovement.Object.Character Movement: Avoidance.AvoidanceGroup\" \"Object.Character.CharacterMovement.Object.Character Movement: Avoidance.GroupsToAvoid\" \"Object.Character.CharacterMovement.Object.Character Movement: Avoidance.GroupsToIgnore\" \"Object.Character.CharacterMovement.Object.NavMovement.NavAgentProps\" \"Object.Character.CapsuleComponent.Object.Collision.BodyInstance.WalkableSlopeOverride\" "
 SCharacter="\"Object.Components.camera.Object.PostProcess.PostProcessSettings\" \"Object.Components.camera.Object.PostProcess.PostProcessSettings.ColorSaturationShadows\" \"Object.Components.camera.Object.PostProcess.PostProcessSettings.ColorContrastShadows\" \"Object.Components.camera.Object.PostProcess.PostProcessSettings.ColorGammaShadows\" \"Object.Components.camera.Object.PostProcess.PostProcessSettings.ColorGainShadows\" \"Object.Components.camera.Object.PostProcess.PostProcessSettings.ColorOffsetShadows\" \"Object.Components.camera.Object.PostProcess.PostProcessSettings.LensFlareTints\" \"Object.Character.Mesh.Object.Collision.BodyInstance.WalkableSlopeOverride\" \"Object.Character.CharacterMovement.Object.Character Movement (Rotation Settings).RotationRate\" \"Object.Character.CharacterMovement.Object.Character Movement: Avoidance.AvoidanceGroup\" \"Object.Character.CharacterMovement.Object.Character Movement: Avoidance.GroupsToAvoid\" \"Object.Character.CharacterMovement.Object.Character Movement: Avoidance.GroupsToIgnore\" \"Object.Character.CharacterMovement.Object.NavMovement.NavAgentProps\" \"Object.Character.CapsuleComponent.Object.Collision.BodyInstance.WalkableSlopeOverride\" "
 Character="\"Object.Components.camera.Object.PostProcess.PostProcessSettings\" \"Object.Components.camera.Object.PostProcess.PostProcessSettings.ColorSaturationShadows\" \"Object.Components.camera.Object.PostProcess.PostProcessSettings.ColorContrastShadows\" \"Object.Components.camera.Object.PostProcess.PostProcessSettings.ColorGammaShadows\" \"Object.Components.camera.Object.PostProcess.PostProcessSettings.ColorGainShadows\" \"Object.Components.camera.Object.PostProcess.PostProcessSettings.ColorOffsetShadows\" \"Object.Components.camera.Object.PostProcess.PostProcessSettings.LensFlareTints\" \"Object.Character.Mesh.Object.Collision.BodyInstance.WalkableSlopeOverride\" \"Object.Character.CharacterMovement.Object.Character Movement (Rotation Settings).RotationRate\" \"Object.Character.CharacterMovement.Object.Character Movement: Avoidance.AvoidanceGroup\" \"Object.Character.CharacterMovement.Object.Character Movement: Avoidance.GroupsToAvoid\" \"Object.Character.CharacterMovement.Object.Character Movement: Avoidance.GroupsToIgnore\" \"Object.Character.CharacterMovement.Object.NavMovement.NavAgentProps\" \"Object.Character.CapsuleComponent.Object.Collision.BodyInstance.WalkableSlopeOverride\" "
@@ -5465,7 +5481,7 @@ PhysicsVolume="\"Object.Collision.BrushComponent.Object.Collision.BodyInstance\"
 Volume="\"Object.Collision.BrushComponent.Object.Collision.BodyInstance\" \"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 Brush="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 WBP_HealthIndicator_C="\"Object.Appearance.ColorAndOpacity\" "
-UserWidget="\"Object.Render Transform.RenderTransform\" "
+UserWidget="\"Object.Appearance.ColorAndOpacity\" \"Object.Render Transform.RenderTransform\" "
 BP_ExplosiveBarrel_C=
 SExplosiveBarrel=
 REINST_BP_ExplosiveBarrel_C_33=
@@ -5600,14 +5616,16 @@ WBP_LevelSelectMenu_C="\"Object.Appearance.ColorAndOpacity\" \"Object.Render Tra
 WBP_LevelSelectionButton_C="\"Object.Appearance.ColorAndOpacity\" \"Object.Render Transform.RenderTransform\" "
 VerticalBox="\"Object.Render Transform.RenderTransform\" "
 HorizontalBox="\"Object.Render Transform.RenderTransform\" "
-WBP_LevelSelectionBox_C=
-SLevelSelectionBoxWidget=
+WBP_LevelSelectionBox_C="\"Object.Appearance.ColorAndOpacity\" \"Object.Render Transform.RenderTransform\" "
+SLevelSelectionBoxWidget="\"Object.Appearance.ColorAndOpacity\" \"Object.Render Transform.RenderTransform\" "
 WrapBox="\"Object.Render Transform.RenderTransform\" "
 ScrollBox="\"Object.Style.WidgetStyle\" \"Object.Style.WidgetStyle.LeftShadowBrush\" \"Object.Style.WidgetBarStyle\" \"Object.Render Transform.RenderTransform\" "
 WBP_ContentSelectionButton_C="\"Object.Appearance.ColorAndOpacity\" \"Object.Render Transform.RenderTransform\" "
-WBP_ContentSelectionBox_C="\"Object.Render Transform.RenderTransform\" "
-SContentSelectionBoxWidget="\"Object.Render Transform.RenderTransform\" "
-WBP_SessionSelectionBox_C="\"Object.Render Transform.RenderTransform\" "
+WBP_ContentSelectionBox_C="\"Object.Appearance.ColorAndOpacity\" \"Object.Render Transform.RenderTransform\" "
+SContentSelectionBoxWidget="\"Object.Appearance.ColorAndOpacity\" \"Object.Render Transform.RenderTransform\" "
+WBP_SessionSelectionBox_C="\"Object.Appearance.ColorAndOpacity\" \"Object.Render Transform.RenderTransform\" "
+CanvasPanel="\"Object.Render Transform.RenderTransform\" "
+WBP_CreateSessionMenu_C="\"Object.Appearance.ColorAndOpacity\" \"Object.Render Transform.RenderTransform\" "
 
 [PlacementMode]
 RecentlyPlaced=/Script/NavigationSystem.NavMeshBoundsVolume;/Engine/Transient.ActorFactoryBoxVolume_0
@@ -5632,26 +5650,26 @@ RecentlyPlaced=/Script/Engine.SphereReflectionCapture;/Engine/Transient.ActorFac
 RecentlyPlaced=/Game/Blueprints/Miscellaneous/BP_ExplosiveBarrel.BP_ExplosiveBarrel;
 
 [ContentBrowserRecent]
-MRUItem0=/Game/UI/SelectionBoxes/WBP_SessionSelectionBox
-MRUItem1=/Game/UI/WBP_LevelSelectionBox
-MRUItem2=/Game/UI/NewBlueprint
-MRUItem3=/Game/UI/WBP_ContentSelectionButton
-MRUItem4=/Game/UI/WBP_ContentSelectionBox
-MRUItem5=/Game/UI/WBP_LevelSelectMenu
-MRUItem6=/Game/UI/WBP_LevelSelectionButton
-MRUItem7=/Game/Level/MainMenu
-MRUItem8=/Game/GameModes/BP_TestGameMode
-MRUItem9=/Game/Level/maps/MainMenu
-MRUItem10=/Game/Level/maps/FloatingIsland
-MRUItem11=/Game/Level/maps/Wimbledon
-MRUItem12=/Game/Level/maps/Blockout
-MRUItem13=/Game/Level/maps/VoidMap
-MRUItem14=/Game/Level/maps/Blockout_P
-MRUItem15=/Game/Level/maps/TestMap
-MRUItem16=/Game/UI/WBP_MainMenu
-MRUItem17=/Game/Objects/Miscellaneous/ExplosiveBarrel/BP_ExplosiveBarrel
-MRUItem18=/Game/Objects/TrackerBot/BP_TrackerBot
-MRUItem19=/Game/Objects/Characters/AIPlayer/BP_MachineGun_AI
+MRUItem0=/Game/UI/WBP_JoinASessionMenu
+MRUItem1=/Game/UI/WBP_LevelSelectMenu
+MRUItem2=/Game/UI/WBP_CreateSessionMenu
+MRUItem3=/Game/UI/SelectionBoxes/WBP_SessionSelectionBox
+MRUItem4=/Game/UI/WBP_LevelSelectionBox
+MRUItem5=/Game/UI/NewBlueprint
+MRUItem6=/Game/UI/WBP_ContentSelectionButton
+MRUItem7=/Game/UI/WBP_ContentSelectionBox
+MRUItem8=/Game/UI/WBP_LevelSelectionButton
+MRUItem9=/Game/Level/MainMenu
+MRUItem10=/Game/GameModes/BP_TestGameMode
+MRUItem11=/Game/Level/maps/MainMenu
+MRUItem12=/Game/Level/maps/FloatingIsland
+MRUItem13=/Game/Level/maps/Wimbledon
+MRUItem14=/Game/Level/maps/Blockout
+MRUItem15=/Game/Level/maps/VoidMap
+MRUItem16=/Game/Level/maps/Blockout_P
+MRUItem17=/Game/Level/maps/TestMap
+MRUItem18=/Game/UI/WBP_MainMenu
+MRUItem19=/Game/Objects/Miscellaneous/ExplosiveBarrel/BP_ExplosiveBarrel
 
 [AssetEditorToolkitTabLocation]
 /Game/Blueprints/BP_PlayerPawn.BP_PlayerPawn=0
