Created a Play Modes menu and created it when clicking the main menu "Play".

--- a/CoopGame/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/CoopGame/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -5221,6 +5221,9 @@ CleanShutdown=False
 SuppressRestorePreviouslyOpenAssetsNotification=True
 OpenAssetsAtExit=/Game/UI/SelectionBoxes/WBP_SessionSelectionBox.WBP_SessionSelectionBox
 OpenAssetsAtExit=/Game/UI/WBP_CreateSessionMenu.WBP_CreateSessionMenu
+OpenAssetsAtExit=/Game/UI/WBP_MainMenu.WBP_MainMenu
+OpenAssetsAtExit=/Game/UI/WBP_JoinASessionMenu.WBP_JoinASessionMenu
+OpenAssetsAtExit=/Game/UI/WBP_LevelSelectMenu.WBP_LevelSelectMenu
 
 [RootWindow]
 ScreenPosition=X=470.000 Y=198.000
@@ -5430,6 +5433,7 @@ ArrayProperty=BP_PlayerPawn_C.Physics.ConstraintsGroup,BP_PlayerPawn_C.Rendering
 PopulateBox_3=BP_PlayerPawn_C.Physics.ConstraintsGroup,BP_PlayerPawn_C.Rendering.TextureStreaming,BP_PlayerPawn_C.Rendering.LOD,BP_PlayerPawn_C.Collision.Collision,BP_TrackerBot_C.Physics.ConstraintsGroup,BP_TrackerBot_C.Rendering.TextureStreaming,BP_TrackerBot_C.Rendering.LOD,BP_TrackerBot_C.Collision.Collision,
 WBP_SessionSelectionBox_C=BP_PlayerPawn_C.Physics.ConstraintsGroup,BP_PlayerPawn_C.Rendering.TextureStreaming,BP_PlayerPawn_C.Rendering.LOD,BP_PlayerPawn_C.Collision.Collision,BP_TrackerBot_C.Physics.ConstraintsGroup,BP_TrackerBot_C.Rendering.TextureStreaming,BP_TrackerBot_C.Rendering.LOD,BP_TrackerBot_C.Collision.Collision,
 SGameInstance=BP_PlayerPawn_C.Physics.ConstraintsGroup,BP_PlayerPawn_C.Rendering.TextureStreaming,BP_PlayerPawn_C.Rendering.LOD,BP_PlayerPawn_C.Collision.Collision,BP_TrackerBot_C.Physics.ConstraintsGroup,BP_TrackerBot_C.Rendering.TextureStreaming,BP_TrackerBot_C.Rendering.LOD,BP_TrackerBot_C.Collision.Collision,
+WBP_JoinASessionMenu_C=BP_PlayerPawn_C.Physics.ConstraintsGroup,BP_PlayerPawn_C.Rendering.TextureStreaming,BP_PlayerPawn_C.Rendering.LOD,BP_PlayerPawn_C.Collision.Collision,BP_TrackerBot_C.Physics.ConstraintsGroup,BP_TrackerBot_C.Rendering.TextureStreaming,BP_TrackerBot_C.Rendering.LOD,BP_TrackerBot_C.Collision.Collision,
 
 [DetailPropertyExpansion]
 InputSettings="\"Object.Bindings.ActionMappings.ActionMappings[4]\" "
@@ -5650,26 +5654,26 @@ RecentlyPlaced=/Script/Engine.SphereReflectionCapture;/Engine/Transient.ActorFac
 RecentlyPlaced=/Game/Blueprints/Miscellaneous/BP_ExplosiveBarrel.BP_ExplosiveBarrel;
 
 [ContentBrowserRecent]
-MRUItem0=/Game/UI/WBP_JoinASessionMenu
+MRUItem0=/Game/UI/WBP_PlayModesMenu
 MRUItem1=/Game/UI/WBP_LevelSelectMenu
-MRUItem2=/Game/UI/WBP_CreateSessionMenu
-MRUItem3=/Game/UI/SelectionBoxes/WBP_SessionSelectionBox
-MRUItem4=/Game/UI/WBP_LevelSelectionBox
-MRUItem5=/Game/UI/NewBlueprint
-MRUItem6=/Game/UI/WBP_ContentSelectionButton
-MRUItem7=/Game/UI/WBP_ContentSelectionBox
-MRUItem8=/Game/UI/WBP_LevelSelectionButton
-MRUItem9=/Game/Level/MainMenu
-MRUItem10=/Game/GameModes/BP_TestGameMode
-MRUItem11=/Game/Level/maps/MainMenu
-MRUItem12=/Game/Level/maps/FloatingIsland
-MRUItem13=/Game/Level/maps/Wimbledon
-MRUItem14=/Game/Level/maps/Blockout
-MRUItem15=/Game/Level/maps/VoidMap
-MRUItem16=/Game/Level/maps/Blockout_P
-MRUItem17=/Game/Level/maps/TestMap
-MRUItem18=/Game/UI/WBP_MainMenu
-MRUItem19=/Game/Objects/Miscellaneous/ExplosiveBarrel/BP_ExplosiveBarrel
+MRUItem2=/Game/UI/WBP_MainMenu
+MRUItem3=/Game/UI/WBP_JoinASessionMenu
+MRUItem4=/Game/UI/WBP_CreateSessionMenu
+MRUItem5=/Game/UI/SelectionBoxes/WBP_SessionSelectionBox
+MRUItem6=/Game/UI/WBP_LevelSelectionBox
+MRUItem7=/Game/UI/NewBlueprint
+MRUItem8=/Game/UI/WBP_ContentSelectionButton
+MRUItem9=/Game/UI/WBP_ContentSelectionBox
+MRUItem10=/Game/UI/WBP_LevelSelectionButton
+MRUItem11=/Game/Level/MainMenu
+MRUItem12=/Game/GameModes/BP_TestGameMode
+MRUItem13=/Game/Level/maps/MainMenu
+MRUItem14=/Game/Level/maps/FloatingIsland
+MRUItem15=/Game/Level/maps/Wimbledon
+MRUItem16=/Game/Level/maps/Blockout
+MRUItem17=/Game/Level/maps/VoidMap
+MRUItem18=/Game/Level/maps/Blockout_P
+MRUItem19=/Game/Level/maps/TestMap
 
 [AssetEditorToolkitTabLocation]
 /Game/Blueprints/BP_PlayerPawn.BP_PlayerPawn=0
