--- a/CoopGame/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/CoopGame/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -49,7 +49,7 @@ GridEnabled=False
 LastLevel=/Game/Level/MainMenu
 
 [ModuleFileTracking]
-CoopGame.TimeStamp=2020.05.18-02.20.10
+CoopGame.TimeStamp=2020.05.18-03.27.02
 CoopGame.LastCompileMethod=External
 PakFile.TimeStamp=2019.12.20-23.26.51
 PakFile.LastCompileMethod=Unknown
@@ -5226,9 +5226,10 @@ WBP_JoinASessionMenu_C.Render Transform=True
 WBP_JoinASessionMenu_C.Clipping=True
 WBP_JoinASessionMenu_C.Navigation=True
 WBP_JoinASessionMenu_C.Localization=True
+WBP_SessionSelectionBox_C.Designer=True
 
 [AssetEditorManager]
-CleanShutdown=True
+CleanShutdown=False
 SuppressRestorePreviouslyOpenAssetsNotification=True
 
 [RootWindow]
@@ -5662,13 +5663,13 @@ RecentlyPlaced=/Script/Engine.SphereReflectionCapture;/Engine/Transient.ActorFac
 RecentlyPlaced=/Game/Blueprints/Miscellaneous/BP_ExplosiveBarrel.BP_ExplosiveBarrel;
 
 [ContentBrowserRecent]
-MRUItem0=/Game/GameModes/BP_TestGameMode
-MRUItem1=/Game/UI/WBP_PlayModesMenu
-MRUItem2=/Game/UI/WBP_LevelSelectMenu
-MRUItem3=/Game/UI/WBP_MainMenu
-MRUItem4=/Game/UI/WBP_JoinASessionMenu
-MRUItem5=/Game/UI/WBP_CreateSessionMenu
-MRUItem6=/Game/UI/SelectionBoxes/WBP_SessionSelectionBox
+MRUItem0=/Game/UI/SelectionBoxes/WBP_SessionSelectionBox
+MRUItem1=/Game/GameModes/BP_TestGameMode
+MRUItem2=/Game/UI/WBP_PlayModesMenu
+MRUItem3=/Game/UI/WBP_LevelSelectMenu
+MRUItem4=/Game/UI/WBP_MainMenu
+MRUItem5=/Game/UI/WBP_JoinASessionMenu
+MRUItem6=/Game/UI/WBP_CreateSessionMenu
 MRUItem7=/Game/UI/WBP_LevelSelectionBox
 MRUItem8=/Game/UI/NewBlueprint
 MRUItem9=/Game/UI/WBP_ContentSelectionButton
