Session selection box now updates the list whenever a new session is found.

--- a/CoopGame/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/CoopGame/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -49,8 +49,8 @@ GridEnabled=False
 LastLevel=/Game/Level/MainMenu
 
 [ModuleFileTracking]
-CoopGame.TimeStamp=2020.05.18-03.27.02
-CoopGame.LastCompileMethod=External
+CoopGame.TimeStamp=2020.05.18-03.48.28
+CoopGame.LastCompileMethod=Runtime
 PakFile.TimeStamp=2019.12.20-23.26.51
 PakFile.LastCompileMethod=Unknown
 RSA.TimeStamp=2019.12.20-23.26.56
@@ -5227,10 +5227,13 @@ WBP_JoinASessionMenu_C.Clipping=True
 WBP_JoinASessionMenu_C.Navigation=True
 WBP_JoinASessionMenu_C.Localization=True
 WBP_SessionSelectionBox_C.Designer=True
+WBP_SessionSelectionBox_C.Default=True
 
 [AssetEditorManager]
-CleanShutdown=False
+CleanShutdown=True
 SuppressRestorePreviouslyOpenAssetsNotification=True
+OpenAssetsAtExit=/Game/UI/WBP_JoinASessionMenu.WBP_JoinASessionMenu
+OpenAssetsAtExit=/Game/UI/SelectionBoxes/WBP_SessionSelectionBox.WBP_SessionSelectionBox
 
 [RootWindow]
 ScreenPosition=X=470.000 Y=198.000
@@ -5263,7 +5266,7 @@ ContentBrowserTab1.ActiveTypeFilters=
 ContentBrowserTab1.EnabledTypeFilters=
 ContentBrowserTab1.ActiveFrontendFilters=
 ContentBrowserTab1.EnabledFrontendFilters=
-ContentBrowserTab1.SelectedPaths=/Game/UI/SelectionBoxes
+ContentBrowserTab1.SelectedPaths=/Game/UI
 ContentBrowserTab1.Favorites.SelectedPaths=
 FavoritePaths=
 ContentBrowserTab1.CollectionsExpanded=True
@@ -5664,11 +5667,11 @@ RecentlyPlaced=/Game/Blueprints/Miscellaneous/BP_ExplosiveBarrel.BP_ExplosiveBar
 
 [ContentBrowserRecent]
 MRUItem0=/Game/UI/SelectionBoxes/WBP_SessionSelectionBox
-MRUItem1=/Game/GameModes/BP_TestGameMode
-MRUItem2=/Game/UI/WBP_PlayModesMenu
-MRUItem3=/Game/UI/WBP_LevelSelectMenu
-MRUItem4=/Game/UI/WBP_MainMenu
-MRUItem5=/Game/UI/WBP_JoinASessionMenu
+MRUItem1=/Game/UI/WBP_JoinASessionMenu
+MRUItem2=/Game/GameModes/BP_TestGameMode
+MRUItem3=/Game/UI/WBP_PlayModesMenu
+MRUItem4=/Game/UI/WBP_LevelSelectMenu
+MRUItem5=/Game/UI/WBP_MainMenu
 MRUItem6=/Game/UI/WBP_CreateSessionMenu
 MRUItem7=/Game/UI/WBP_LevelSelectionBox
 MRUItem8=/Game/UI/NewBlueprint
