Default game mode wasn't set.

--- a/CoopGame/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/CoopGame/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -27,6 +27,8 @@ MultipleInstancePositions=(X=0,Y=0)
 MultipleInstancePositions=(X=672,Y=0)
 MultipleInstancePositions=(X=0,Y=512)
 NewWindowPosition=(X=655,Y=323)
+PlayNumberOfClients=2
+LastExecutedPlayModeType=PlayMode_InEditorFloating
 
 [/Script/UnrealEd.LevelEditorViewportSettings]
 SnapToSurface=(bEnabled=False,SnapOffsetExtent=0.000000,bSnapRotation=True)
@@ -46,10 +48,10 @@ CurrentPosGridSize=4
 GridEnabled=False
 
 [EditorStartup]
-LastLevel=/Game/Level/MainMenu
+LastLevel=/Game/Level/maps/FloatingIsland
 
 [ModuleFileTracking]
-CoopGame.TimeStamp=2020.05.18-05.57.27
+CoopGame.TimeStamp=2020.05.18-06.35.12
 CoopGame.LastCompileMethod=External
 PakFile.TimeStamp=2019.12.20-23.26.51
 PakFile.LastCompileMethod=Unknown
@@ -5230,11 +5232,22 @@ WBP_JoinASessionMenu_C.Navigation=True
 WBP_JoinASessionMenu_C.Localization=True
 WBP_SessionSelectionBox_C.Designer=True
 WBP_SessionSelectionBox_C.Default=True
+REINST_BP_PlayerPawn_C_68.Variable=True
+REINST_BP_PlayerPawn_C_68.Sockets=True
+REINST_BP_PlayerPawn_C_68.Player=True
+REINST_BP_PlayerPawn_C_68.HealthComponent=True
+REINST_BP_PlayerPawn_C_68.Tags=True
+REINST_BP_PlayerPawn_C_68.ComponentReplication=True
+REINST_BP_PlayerPawn_C_68.Activation=True
+REINST_BP_PlayerPawn_C_68.Cooking=True
+REINST_BP_PlayerPawn_C_68.Events=True
 
 [AssetEditorManager]
-CleanShutdown=True
+CleanShutdown=False
 SuppressRestorePreviouslyOpenAssetsNotification=True
-OpenAssetsAtExit=/Game/UI/WBP_CreateSessionMenu.WBP_CreateSessionMenu
+OpenAssetsAtExit=/Game/Objects/Characters/BP_PlayerPawn.BP_PlayerPawn
+OpenAssetsAtExit=/Game/Objects/Characters/BP_AIPlayer.BP_AIPlayer
+OpenAssetsAtExit=/Game/Objects/TrackerBot/BP_TrackerBot.BP_TrackerBot
 
 [RootWindow]
 ScreenPosition=X=470.000 Y=198.000
@@ -5267,7 +5280,7 @@ ContentBrowserTab1.ActiveTypeFilters=
 ContentBrowserTab1.EnabledTypeFilters=
 ContentBrowserTab1.ActiveFrontendFilters=
 ContentBrowserTab1.EnabledFrontendFilters=
-ContentBrowserTab1.SelectedPaths=/Game/UI
+ContentBrowserTab1.SelectedPaths=/Game/GameModes
 ContentBrowserTab1.Favorites.SelectedPaths=
 FavoritePaths=
 ContentBrowserTab1.CollectionsExpanded=True
@@ -5318,9 +5331,9 @@ Level=../../../../../../unreal projects/TomLooman/UE4_MasteryCourse_CoopGame/Coo
 Project=C:/Program Files/Epic Games/UE_4.22/
 
 [MRU]
-MRUItem0=/Game/Level/MainMenu
-MRUItem1=/Game/Level/maps/MainMenu
-MRUItem2=/Game/Level/maps/FloatingIsland
+MRUItem0=/Game/Level/maps/FloatingIsland
+MRUItem1=/Game/Level/MainMenu
+MRUItem2=/Game/Level/maps/MainMenu
 MRUItem3=/Game/Level/maps/Wimbledon
 MRUItem4=/Game/Level/maps/Blockout
 MRUItem5=/Game/Level/maps/VoidMap
@@ -5453,7 +5466,7 @@ Object=
 BP_PlayerPawn_C="\"Object.Components.camera.Object.PostProcess.PostProcessSettings\" \"Object.Components.camera.Object.PostProcess.PostProcessSettings.ColorSaturationShadows\" \"Object.Components.camera.Object.PostProcess.PostProcessSettings.ColorContrastShadows\" \"Object.Components.camera.Object.PostProcess.PostProcessSettings.ColorGammaShadows\" \"Object.Components.camera.Object.PostProcess.PostProcessSettings.ColorGainShadows\" \"Object.Components.camera.Object.PostProcess.PostProcessSettings.ColorOffsetShadows\" \"Object.Components.camera.Object.PostProcess.PostProcessSettings.LensFlareTints\" \"Object.Character.Mesh.Object.Collision.BodyInstance.WalkableSlopeOverride\" \"Object.Character.CharacterMovement.Object.Character Movement (Rotation Settings).RotationRate\" \"Object.Character.CharacterMovement.Object.Character Movement: Avoidance.AvoidanceGroup\" \"Object.Character.CharacterMovement.Object.Character Movement: Avoidance.GroupsToAvoid\" \"Object.Character.CharacterMovement.Object.Character Movement: Avoidance.GroupsToIgnore\" \"Object.Character.CharacterMovement.Object.NavMovement.NavAgentProps\" \"Object.Character.CapsuleComponent.Object.Collision.BodyInstance.WalkableSlopeOverride\" "
 SCharacter="\"Object.Components.camera.Object.PostProcess.PostProcessSettings\" \"Object.Components.camera.Object.PostProcess.PostProcessSettings.ColorSaturationShadows\" \"Object.Components.camera.Object.PostProcess.PostProcessSettings.ColorContrastShadows\" \"Object.Components.camera.Object.PostProcess.PostProcessSettings.ColorGammaShadows\" \"Object.Components.camera.Object.PostProcess.PostProcessSettings.ColorGainShadows\" \"Object.Components.camera.Object.PostProcess.PostProcessSettings.ColorOffsetShadows\" \"Object.Components.camera.Object.PostProcess.PostProcessSettings.LensFlareTints\" \"Object.Character.Mesh.Object.Collision.BodyInstance.WalkableSlopeOverride\" \"Object.Character.CharacterMovement.Object.Character Movement (Rotation Settings).RotationRate\" \"Object.Character.CharacterMovement.Object.Character Movement: Avoidance.AvoidanceGroup\" \"Object.Character.CharacterMovement.Object.Character Movement: Avoidance.GroupsToAvoid\" \"Object.Character.CharacterMovement.Object.Character Movement: Avoidance.GroupsToIgnore\" \"Object.Character.CharacterMovement.Object.NavMovement.NavAgentProps\" \"Object.Character.CapsuleComponent.Object.Collision.BodyInstance.WalkableSlopeOverride\" "
 Character="\"Object.Components.camera.Object.PostProcess.PostProcessSettings\" \"Object.Components.camera.Object.PostProcess.PostProcessSettings.ColorSaturationShadows\" \"Object.Components.camera.Object.PostProcess.PostProcessSettings.ColorContrastShadows\" \"Object.Components.camera.Object.PostProcess.PostProcessSettings.ColorGammaShadows\" \"Object.Components.camera.Object.PostProcess.PostProcessSettings.ColorGainShadows\" \"Object.Components.camera.Object.PostProcess.PostProcessSettings.ColorOffsetShadows\" \"Object.Components.camera.Object.PostProcess.PostProcessSettings.LensFlareTints\" \"Object.Character.Mesh.Object.Collision.BodyInstance.WalkableSlopeOverride\" \"Object.Character.CharacterMovement.Object.Character Movement (Rotation Settings).RotationRate\" \"Object.Character.CharacterMovement.Object.Character Movement: Avoidance.AvoidanceGroup\" \"Object.Character.CharacterMovement.Object.Character Movement: Avoidance.GroupsToAvoid\" \"Object.Character.CharacterMovement.Object.Character Movement: Avoidance.GroupsToIgnore\" \"Object.Character.CharacterMovement.Object.NavMovement.NavAgentProps\" \"Object.Character.CapsuleComponent.Object.Collision.BodyInstance.WalkableSlopeOverride\" "
-Pawn="\"Object.Components.camera.Object.PostProcess.PostProcessSettings\" \"Object.Components.camera.Object.PostProcess.PostProcessSettings.ColorSaturationShadows\" \"Object.Components.camera.Object.PostProcess.PostProcessSettings.ColorContrastShadows\" \"Object.Components.camera.Object.PostProcess.PostProcessSettings.ColorGammaShadows\" \"Object.Components.camera.Object.PostProcess.PostProcessSettings.ColorGainShadows\" \"Object.Components.camera.Object.PostProcess.PostProcessSettings.ColorOffsetShadows\" \"Object.Components.camera.Object.PostProcess.PostProcessSettings.LensFlareTints\" \"Object.Character.Mesh.Object.Collision.BodyInstance.WalkableSlopeOverride\" \"Object.Character.CharacterMovement.Object.Character Movement (Rotation Settings).RotationRate\" \"Object.Character.CharacterMovement.Object.Character Movement: Avoidance.AvoidanceGroup\" \"Object.Character.CharacterMovement.Object.Character Movement: Avoidance.GroupsToAvoid\" \"Object.Character.CharacterMovement.Object.Character Movement: Avoidance.GroupsToIgnore\" \"Object.Character.CharacterMovement.Object.NavMovement.NavAgentProps\" \"Object.Character.CapsuleComponent.Object.Collision.BodyInstance.WalkableSlopeOverride\" "
+Pawn=
 REINST_BP_PlayerPawn_C_34="\"Object.Character.Mesh.Object.Collision.BodyInstance.WalkableSlopeOverride\" \"Object.Character.CharacterMovement.Object.Character Movement (Rotation Settings).RotationRate\" \"Object.Character.CharacterMovement.Object.Character Movement: Avoidance.AvoidanceGroup\" \"Object.Character.CharacterMovement.Object.Character Movement: Avoidance.GroupsToAvoid\" \"Object.Character.CharacterMovement.Object.Character Movement: Avoidance.GroupsToIgnore\" \"Object.Character.CharacterMovement.Object.NavMovement.NavAgentProps\" \"Object.Character.CapsuleComponent.Object.Collision.BodyInstance.WalkableSlopeOverride\" "
 EditorLoadingSavingSettings="\"Object.AutoReimport\" \"Object.AutoReimport.AutoReimportDirectorySettings\" \"Object.AutoReimport.AutoReimportDirectorySettings.AutoReimportDirectorySettings[0]\" \"Object.AutoReimport.AutoReimportDirectorySettings.AutoReimportDirectorySettings[0].Wildcards\" \"Object.Blueprints\" \"Object.AutoSave\" "
 CrashReportsPrivacySettings="\"Object.Options.bSendUnattendedBugReports\" "
@@ -5643,6 +5656,7 @@ WBP_SessionSelectionBox_C=
 CanvasPanel="\"Object.Render Transform.RenderTransform\" "
 WBP_CreateSessionMenu_C="\"Object.Appearance.ColorAndOpacity\" \"Object.Render Transform.RenderTransform\" "
 WBP_JoinASessionMenu_C="\"Object.Appearance.ColorAndOpacity\" \"Object.Render Transform.RenderTransform\" "
+REINST_BP_PlayerPawn_C_68="\"Object.Components.camera.Object.PostProcess.PostProcessSettings\" \"Object.Components.camera.Object.PostProcess.PostProcessSettings.ColorSaturationShadows\" \"Object.Components.camera.Object.PostProcess.PostProcessSettings.ColorContrastShadows\" \"Object.Components.camera.Object.PostProcess.PostProcessSettings.ColorGammaShadows\" \"Object.Components.camera.Object.PostProcess.PostProcessSettings.ColorGainShadows\" \"Object.Components.camera.Object.PostProcess.PostProcessSettings.ColorOffsetShadows\" \"Object.Components.camera.Object.PostProcess.PostProcessSettings.LensFlareTints\" \"Object.Character.Mesh.Object.Collision.BodyInstance.WalkableSlopeOverride\" \"Object.Character.CharacterMovement.Object.Character Movement (Rotation Settings).RotationRate\" \"Object.Character.CharacterMovement.Object.Character Movement: Avoidance.AvoidanceGroup\" \"Object.Character.CharacterMovement.Object.Character Movement: Avoidance.GroupsToAvoid\" \"Object.Character.CharacterMovement.Object.Character Movement: Avoidance.GroupsToIgnore\" \"Object.Character.CharacterMovement.Object.NavMovement.NavAgentProps\" \"Object.Character.CapsuleComponent.Object.Collision.BodyInstance.WalkableSlopeOverride\" "
 
 [PlacementMode]
 RecentlyPlaced=/Script/NavigationSystem.NavMeshBoundsVolume;/Engine/Transient.ActorFactoryBoxVolume_0
@@ -5667,26 +5681,26 @@ RecentlyPlaced=/Script/Engine.SphereReflectionCapture;/Engine/Transient.ActorFac
 RecentlyPlaced=/Game/Blueprints/Miscellaneous/BP_ExplosiveBarrel.BP_ExplosiveBarrel;
 
 [ContentBrowserRecent]
-MRUItem0=/Game/UI/WBP_CreateSessionMenu
-MRUItem1=/Game/UI/SelectionBoxes/WBP_SessionSelectionBox
-MRUItem2=/Game/UI/WBP_JoinASessionMenu
-MRUItem3=/Game/GameModes/BP_TestGameMode
-MRUItem4=/Game/UI/WBP_PlayModesMenu
-MRUItem5=/Game/UI/WBP_LevelSelectMenu
-MRUItem6=/Game/UI/WBP_MainMenu
-MRUItem7=/Game/UI/WBP_LevelSelectionBox
-MRUItem8=/Game/UI/NewBlueprint
-MRUItem9=/Game/UI/WBP_ContentSelectionButton
-MRUItem10=/Game/UI/WBP_ContentSelectionBox
-MRUItem11=/Game/UI/WBP_LevelSelectionButton
-MRUItem12=/Game/Level/MainMenu
-MRUItem13=/Game/Level/maps/MainMenu
-MRUItem14=/Game/Level/maps/FloatingIsland
-MRUItem15=/Game/Level/maps/Wimbledon
-MRUItem16=/Game/Level/maps/Blockout
-MRUItem17=/Game/Level/maps/VoidMap
-MRUItem18=/Game/Level/maps/Blockout_P
-MRUItem19=/Game/Level/maps/TestMap
+MRUItem0=/Game/Objects/TrackerBot/BP_TrackerBot
+MRUItem1=/Game/Objects/Characters/BP_AIPlayer
+MRUItem2=/Game/Objects/Characters/BP_PlayerPawn
+MRUItem3=/Game/Level/maps/FloatingIsland
+MRUItem4=/Game/GameModes/BP_TestGameMode
+MRUItem5=/Game/UI/WBP_CreateSessionMenu
+MRUItem6=/Game/UI/WBP_JoinASessionMenu
+MRUItem7=/Game/UI/SelectionBoxes/WBP_SessionSelectionBox
+MRUItem8=/Game/UI/WBP_PlayModesMenu
+MRUItem9=/Game/UI/WBP_LevelSelectMenu
+MRUItem10=/Game/UI/WBP_MainMenu
+MRUItem11=/Game/UI/WBP_LevelSelectionBox
+MRUItem12=/Game/UI/NewBlueprint
+MRUItem13=/Game/UI/WBP_ContentSelectionButton
+MRUItem14=/Game/UI/WBP_ContentSelectionBox
+MRUItem15=/Game/UI/WBP_LevelSelectionButton
+MRUItem16=/Game/Level/MainMenu
+MRUItem17=/Game/Level/maps/MainMenu
+MRUItem18=/Game/Level/maps/Wimbledon
+MRUItem19=/Game/Level/maps/Blockout
 
 [AssetEditorToolkitTabLocation]
 /Game/Blueprints/BP_PlayerPawn.BP_PlayerPawn=0
