--- a/CoopGame/Config/DefaultEngine.ini
+++ b/CoopGame/Config/DefaultEngine.ini
@@ -11,7 +11,7 @@ AppliedDefaultGraphicsPerformance=Maximum
 [/Script/EngineSettings.GameMapsSettings]
 EditorStartupMap=/Game/Level/MainMenu.MainMenu
 GameDefaultMap=/Game/Level/MainMenu.MainMenu
-GlobalDefaultGameMode=/Script/Engine.GameModeBase
+GlobalDefaultGameMode=/Game/GameModes/BP_TestGameMode.BP_TestGameMode_C
 GameInstanceClass=/Script/CoopGame.SGameInstance
 
 [/Script/Engine.CollisionProfile]
