Made team and freindly fire variables replicated.

--- a/CoopGame/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/CoopGame/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -5243,7 +5243,7 @@ REINST_BP_PlayerPawn_C_68.Cooking=True
 REINST_BP_PlayerPawn_C_68.Events=True
 
 [AssetEditorManager]
-CleanShutdown=False
+CleanShutdown=True
 SuppressRestorePreviouslyOpenAssetsNotification=True
 OpenAssetsAtExit=/Game/Objects/Characters/BP_PlayerPawn.BP_PlayerPawn
 OpenAssetsAtExit=/Game/Objects/Characters/BP_AIPlayer.BP_AIPlayer
@@ -5280,7 +5280,7 @@ ContentBrowserTab1.ActiveTypeFilters=
 ContentBrowserTab1.EnabledTypeFilters=
 ContentBrowserTab1.ActiveFrontendFilters=
 ContentBrowserTab1.EnabledFrontendFilters=
-ContentBrowserTab1.SelectedPaths=/Game/GameModes
+ContentBrowserTab1.SelectedPaths=/Game/Objects/TrackerBot
 ContentBrowserTab1.Favorites.SelectedPaths=
 FavoritePaths=
 ContentBrowserTab1.CollectionsExpanded=True
@@ -5317,7 +5317,7 @@ SequenceBrowser.HiddenColumns=CurveNameList
 SequenceBrowser.HiddenColumns=Class
 
 [Directories2]
-UNR=../../../../../../unreal projects/TomLooman/UE4_MasteryCourse_CoopGame/CoopGame/Content/Level
+UNR=../../../../../../unreal projects/TomLooman/UE4_MasteryCourse_CoopGame/CoopGame/Content/Level/maps
 BRUSH=../../../../../../unreal projects/TomLooman/UE4_MasteryCourse_CoopGame/CoopGame/Content/
 FBX=../../../../../../unreal projects/TomLooman/UE4_MasteryCourse_CoopGame/CoopGame/Content/
 FBXAnim=../../../../../../unreal projects/TomLooman/UE4_MasteryCourse_CoopGame/CoopGame/Content/
