--- a/CoopGame/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/CoopGame/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -51,7 +51,7 @@ GridEnabled=False
 LastLevel=/Game/Level/maps/FloatingIsland
 
 [ModuleFileTracking]
-CoopGame.TimeStamp=2020.05.18-06.35.12
+CoopGame.TimeStamp=2020.05.18-15.29.05
 CoopGame.LastCompileMethod=External
 PakFile.TimeStamp=2019.12.20-23.26.51
 PakFile.LastCompileMethod=Unknown
@@ -5243,11 +5243,8 @@ REINST_BP_PlayerPawn_C_68.Cooking=True
 REINST_BP_PlayerPawn_C_68.Events=True
 
 [AssetEditorManager]
-CleanShutdown=True
+CleanShutdown=False
 SuppressRestorePreviouslyOpenAssetsNotification=True
-OpenAssetsAtExit=/Game/Objects/Characters/BP_PlayerPawn.BP_PlayerPawn
-OpenAssetsAtExit=/Game/Objects/Characters/BP_AIPlayer.BP_AIPlayer
-OpenAssetsAtExit=/Game/Objects/TrackerBot/BP_TrackerBot.BP_TrackerBot
 
 [RootWindow]
 ScreenPosition=X=470.000 Y=198.000
@@ -5280,7 +5277,7 @@ ContentBrowserTab1.ActiveTypeFilters=
 ContentBrowserTab1.EnabledTypeFilters=
 ContentBrowserTab1.ActiveFrontendFilters=
 ContentBrowserTab1.EnabledFrontendFilters=
-ContentBrowserTab1.SelectedPaths=/Game/Objects/TrackerBot
+ContentBrowserTab1.SelectedPaths=/Game/Level/maps
 ContentBrowserTab1.Favorites.SelectedPaths=
 FavoritePaths=
 ContentBrowserTab1.CollectionsExpanded=True
@@ -5332,10 +5329,10 @@ Project=C:/Program Files/Epic Games/UE_4.22/
 
 [MRU]
 MRUItem0=/Game/Level/maps/FloatingIsland
-MRUItem1=/Game/Level/MainMenu
-MRUItem2=/Game/Level/maps/MainMenu
-MRUItem3=/Game/Level/maps/Wimbledon
-MRUItem4=/Game/Level/maps/Blockout
+MRUItem1=/Game/Level/maps/Blockout
+MRUItem2=/Game/Level/maps/Wimbledon
+MRUItem3=/Game/Level/MainMenu
+MRUItem4=/Game/Level/maps/MainMenu
 MRUItem5=/Game/Level/maps/VoidMap
 MRUItem6=/Game/Level/maps/Blockout_P
 MRUItem7=/Game/Level/maps/TestMap
@@ -5681,26 +5678,26 @@ RecentlyPlaced=/Script/Engine.SphereReflectionCapture;/Engine/Transient.ActorFac
 RecentlyPlaced=/Game/Blueprints/Miscellaneous/BP_ExplosiveBarrel.BP_ExplosiveBarrel;
 
 [ContentBrowserRecent]
-MRUItem0=/Game/Objects/TrackerBot/BP_TrackerBot
-MRUItem1=/Game/Objects/Characters/BP_AIPlayer
-MRUItem2=/Game/Objects/Characters/BP_PlayerPawn
-MRUItem3=/Game/Level/maps/FloatingIsland
-MRUItem4=/Game/GameModes/BP_TestGameMode
-MRUItem5=/Game/UI/WBP_CreateSessionMenu
-MRUItem6=/Game/UI/WBP_JoinASessionMenu
-MRUItem7=/Game/UI/SelectionBoxes/WBP_SessionSelectionBox
-MRUItem8=/Game/UI/WBP_PlayModesMenu
-MRUItem9=/Game/UI/WBP_LevelSelectMenu
-MRUItem10=/Game/UI/WBP_MainMenu
-MRUItem11=/Game/UI/WBP_LevelSelectionBox
-MRUItem12=/Game/UI/NewBlueprint
-MRUItem13=/Game/UI/WBP_ContentSelectionButton
-MRUItem14=/Game/UI/WBP_ContentSelectionBox
-MRUItem15=/Game/UI/WBP_LevelSelectionButton
-MRUItem16=/Game/Level/MainMenu
-MRUItem17=/Game/Level/maps/MainMenu
-MRUItem18=/Game/Level/maps/Wimbledon
-MRUItem19=/Game/Level/maps/Blockout
+MRUItem0=/Game/Level/maps/FloatingIsland
+MRUItem1=/Game/Level/maps/Blockout
+MRUItem2=/Game/Level/maps/Wimbledon
+MRUItem3=/Game/Objects/TrackerBot/BP_TrackerBot
+MRUItem4=/Game/Objects/Characters/BP_AIPlayer
+MRUItem5=/Game/Objects/Characters/BP_PlayerPawn
+MRUItem6=/Game/GameModes/BP_TestGameMode
+MRUItem7=/Game/UI/WBP_CreateSessionMenu
+MRUItem8=/Game/UI/WBP_JoinASessionMenu
+MRUItem9=/Game/UI/SelectionBoxes/WBP_SessionSelectionBox
+MRUItem10=/Game/UI/WBP_PlayModesMenu
+MRUItem11=/Game/UI/WBP_LevelSelectMenu
+MRUItem12=/Game/UI/WBP_MainMenu
+MRUItem13=/Game/UI/WBP_LevelSelectionBox
+MRUItem14=/Game/UI/NewBlueprint
+MRUItem15=/Game/UI/WBP_ContentSelectionButton
+MRUItem16=/Game/UI/WBP_ContentSelectionBox
+MRUItem17=/Game/UI/WBP_LevelSelectionButton
+MRUItem18=/Game/Level/MainMenu
+MRUItem19=/Game/Level/maps/MainMenu
 
 [AssetEditorToolkitTabLocation]
 /Game/Blueprints/BP_PlayerPawn.BP_PlayerPawn=0
