When reloading, only the client reloads.

--- a/CoopGame/Config/DefaultEngine.ini
+++ b/CoopGame/Config/DefaultEngine.ini
@@ -11,7 +11,7 @@ AppliedDefaultGraphicsPerformance=Maximum
 [/Script/EngineSettings.GameMapsSettings]
 EditorStartupMap=/Game/Level/MainMenu.MainMenu
 GameDefaultMap=/Game/Level/MainMenu.MainMenu
-GlobalDefaultGameMode=/Game/GameModes/BP_TestGameMode.BP_TestGameMode_C
+GlobalDefaultGameMode=/Script/Engine.GameMode
 GameInstanceClass=/Script/CoopGame.SGameInstance
 
 [/Script/Engine.CollisionProfile]
