Now if a player reloads, the server reloads too.

--- a/CoopGame/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/CoopGame/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -5243,7 +5243,7 @@ REINST_BP_PlayerPawn_C_68.Cooking=True
 REINST_BP_PlayerPawn_C_68.Events=True
 
 [AssetEditorManager]
-CleanShutdown=False
+CleanShutdown=True
 SuppressRestorePreviouslyOpenAssetsNotification=True
 
 [RootWindow]
@@ -5314,7 +5314,7 @@ SequenceBrowser.HiddenColumns=CurveNameList
 SequenceBrowser.HiddenColumns=Class
 
 [Directories2]
-UNR=../../../../../../unreal projects/TomLooman/UE4_MasteryCourse_CoopGame/CoopGame/Content/Level
+UNR=../../../../../../unreal projects/TomLooman/UE4_MasteryCourse_CoopGame/CoopGame/Content/Level/maps
 BRUSH=../../../../../../unreal projects/TomLooman/UE4_MasteryCourse_CoopGame/CoopGame/Content/
 FBX=../../../../../../unreal projects/TomLooman/UE4_MasteryCourse_CoopGame/CoopGame/Content/
 FBXAnim=../../../../../../unreal projects/TomLooman/UE4_MasteryCourse_CoopGame/CoopGame/Content/
